# flexible-datetime

./: .pre-commit-config.yaml  Makefile  pyproject.toml
flexible_datetime/: __init__.py  _base.py  flex_datetime.py  flex_delta.py  flex_time.py  flexible_datetime.py
tests/: test_flex_delta.py
tests/tests_class_flexdatetime/: test_output_fmt.py
tests/tests_flex_datetime/: test_output_fmt.py  test_subclasses.py
