[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flexible-datetime"
version = "1.0.10"
description = "Flexible datetime handling for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "arrow>=1.3.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.10.6",
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]

[dependency-groups]
dev = [
    "beanie>=1.29.0",
    "black>=25.1.0",
    "pytest>=8.3.4",
    "ruff>=0.15.5",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
preview = true

[tool.ruff.lint]
select = [
    "I", # Enable all isort rules
    "F", # Enable all flake8 rules
    "UP", # Enable pyupgrade rules to modernize Python syntax
    "B006", # Don't allow mutable default arguments. i.e. def f(x={})
    "PLC0415", # import found outside of the top of the file
]